--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/dependencias
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mariadb://${HOST_IP}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PWD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 jwt.secret=EspDep
