--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mariadb://cxmgkzhk95kfgbq4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/a1eqo05sblqz17d1
-spring.datasource.username=f5ffq4l3jf7myw7v
-spring.datasource.password=o4zuntzi48ntluf1
+spring.datasource.url=jdbc:mariadb://${HOST_IP}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PWD}
 spring.datasource.hikari.max-lifetime=1000
 spring.datasource.hikari.connection-timeout=1000
 spring.datasource.hikari.validation-timeout=1000
