--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://${HOST_IP}/${DB_NAME}
+spring.datasource.url=jdbc:${JAWS_MARIA_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PWD}
 spring.datasource.hikari.max-lifetime=1000
