--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:${JAWS_MARIA_URL}
+spring.datasource.url=jdbc:mariadb://f5ffq4l3jf7myw7v:o04qlhc5etin7b9w@cxmgkzhk95kfgbq4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/a1eqo05sblqz17d1
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PWD}
 spring.datasource.hikari.max-lifetime=1000
