--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://cxmgkzhk95kfgbq4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/a1eqo05sblqz17d1
+spring.datasource.url=jdbc:mariadb://iu51mf0q32fkhfpl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/bs7fub3icf6imvg1
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PWD}
 spring.datasource.hikari.max-lifetime=1000
